--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
 NODE_ENV=development
 
 # Clerk info
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZmFtb3VzLWNhaW1hbi0zMi5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key
 CLERK_SECRET_KEY=your_clerk_secret_key
 
 # Backend port
-NEXT_PUBLIC_API_BASE_URL=http://server:8002
+PORT=8002
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8002
 DYNAMODB_LOCAL_URL=http://dynamodb-local:8000
 
 # AWS DynamoDB 
 AWS_ACCESS_KEY_ID=dummy
 AWS_SECRET_ACCESS_KEY=dummy
 AWS_REGION=us-west-2
+
+
+
 
 
 
