chore: Fix teacher page and deploy pipeline to include CLERK key for building

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,10 @@ jobs:
         working-directory: ./client
         run: npm install
 
-      - name: Build client
+      - name: Build client with Clerk Key
         working-directory: ./client
+        env:
+          NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
         run: npm run build
 
   build-server:
