--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,15 +44,28 @@ services:
     networks:
       - app-network
 
+  # Initialize the data directory with proper permissions
+  dynamodb-init:
+    image: busybox
+    command: sh -c "mkdir -p /tmp/data && chmod 777 /tmp/data && cp -rp /source/* /tmp/data/ 2>/dev/null || true && chmod -R 777 /tmp/data"
+    volumes:
+      - ./docker/dynamodb:/source
+      - dynamodb-data:/tmp/data
+    networks:
+      - app-network
+
   dynamodb-local:
     image: "amazon/dynamodb-local:latest"
     container_name: dynamodb-local
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath /home/dynamodblocal/data"
     ports:
       - "8000:8000"
+    depends_on:
+      - dynamodb-init
     volumes:
-      - "./docker/dynamodb:/home/dynamodblocal/data"
+      - dynamodb-data:/home/dynamodblocal/data
     working_dir: /home/dynamodblocal
+    user: "1000:1000"
     networks:
       - app-network
 
@@ -73,6 +86,7 @@ volumes:
   client_node_modules:
   client_next:
   server_node_modules:
+  dynamodb-data: # Named volume for storing DynamoDB data
 
 networks:
   app-network:
