--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/client-dynamodb": "^3.687.0",
     "@clerk/express": "^1.3.11",
     "@types/multer": "^1.4.12",
+    "@vendia/serverless-express": "^4.12.6",
     "aws-sdk": "^2.1692.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -41,6 +42,7 @@
     "cpx": "^1.5.0",
     "nodemon": "^3.1.7",
     "rimraf": "^6.0.1",
+    "serverless-offline": "^14.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
