--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.687.0",
+    "@clerk/backend": "^1.32.0",
     "@clerk/express": "^1.3.11",
     "@types/multer": "^1.4.12",
     "@vendia/serverless-express": "^4.12.6",
